Correction small images : Road to pixel perfect

--- a/src/scss/elements/_history.scss
+++ b/src/scss/elements/_history.scss
@@ -1,23 +1,13 @@
-.img{
-    position:relative;
-    overflow:auto;
-    width:521px;
-    height:729px;
-    &-small{
-        width:196px;
-        height:269px;
-    }
-}
+
 
 .history {
     &-title {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
-
     &-subtitle{
         font-weight:400;
 
-        @media screen and (max-width: 1920px) {
+        @media screen and (max-width: 2000px) {
             font-size : 1.5rem;
         }
 
@@ -34,16 +24,28 @@
         }
 
         @media screen and (max-width: 769px) {
-            font-size : 0.5rem;
+            font-size : 1rem;
         }
 
         @media screen and (max-width: 481px) {
-            font-size : 0.25rem;
+            font-size : 1.2rem;
+            width:100%;
+            padding-top: 1rem;
+            padding-bottom: 5rem;
         }
+    }
 
-        @media screen and (max-width: 320px) {
-            font-size : 1.25rem;
+    &-story{
+        @media screen and (max-width: 1920px) {
+            width:61%;
         }
+        @media screen and (max-width: 1360px) {
+            width:70%;
+        }
+        @media screen and (max-width: 481px) {
+            width:100%;
+        }
+        margin:auto;
     }
 
     &-width {
@@ -55,6 +57,50 @@
         background-color: $yellowbutton;
         height:1.5px;
         width:54%;
+
+        @media screen and (max-width: 481px) {
+            width:90%;
+        }
+
+    }
+
+    &-img{
+        position:relative;
+        overflow:auto;
+        width:521px;
+        height:729px;
+        &-small{
+            width:30%;
+            height:100%;
+        }
+    }
+
+
+    &-responsive {
+        @media screen and (max-width: 481px) {
+            display:flex;
+            flex-direction: column-reverse;
+            justify-content: center;
+            padding:0;
+            width:90%;
+
+            .image-grid {
+                order:1;
+            }
+            .history-title{
+                font-size:1.75rem;
+
+            }
+            img{
+                flex-grow:3;
+            }
+            div{
+                width:100%;
+            }
+            .history-img-small {
+            padding :0.25rem 0.25rem 3rem 0.25rem;
+            }
+        }
     }
 }
 
